; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_helper.c_utf8_strncmp.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_helper.c_utf8_strncmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@G_NORMALIZE_ALL_COMPOSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @utf8_strncmp(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = load i32, i32* @G_NORMALIZE_ALL_COMPOSE, align 4
  %12 = call i8* @g_utf8_normalize(i8* %10, i32 -1, i32 %11)
  store i8* %12, i8** %7, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* @G_NORMALIZE_ALL_COMPOSE, align 4
  %15 = call i8* @g_utf8_normalize(i8* %13, i32 -1, i32 %14)
  store i8* %15, i8** %8, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i8* @g_utf8_offset_to_pointer(i8* %16, i64 %17)
  store i8 0, i8* %18, align 1
  %19 = load i8*, i8** %8, align 8
  %20 = load i64, i64* %6, align 8
  %21 = call i8* @g_utf8_offset_to_pointer(i8* %19, i64 %20)
  store i8 0, i8* %21, align 1
  %22 = load i8*, i8** %7, align 8
  %23 = load i8*, i8** %8, align 8
  %24 = call i32 @g_utf8_collate(i8* %22, i8* %23)
  store i32 %24, i32* %9, align 4
  %25 = load i8*, i8** %7, align 8
  %26 = call i32 @g_free(i8* %25)
  %27 = load i8*, i8** %8, align 8
  %28 = call i32 @g_free(i8* %27)
  %29 = load i32, i32* %9, align 4
  ret i32 %29
}

declare dso_local i8* @g_utf8_normalize(i8*, i32, i32) #1

declare dso_local i8* @g_utf8_offset_to_pointer(i8*, i64) #1

declare dso_local i32 @g_utf8_collate(i8*, i8*) #1

declare dso_local i32 @g_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
